fix 'save current search' button from being too narrow

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -896,7 +896,7 @@
 
   .dropdown-menu {
     max-width: 350px;
-    min-width: 250px;
+    min-width: 275px;
 
     .row {
       margin: 8px 5px 5px;
